bug fix for encryption key missing on relogin in same browser
